ingress_demo/ingress.yml
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:
  name: fruit-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: lb-external-ip
    networking.gke.io/managed-certificates: gke-demo-cert
    kubernetes.io/ingress.allow-http: "true" 
    networking.gke.io/v1beta1.FrontendConfig: "lb-http-to-https"
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: "/apple"
        backend:
          service: 
            name: apple-service
            port: 
              number: 5678
      - pathType: ImplementationSpecific
        path: "/banana"
        backend:
          service:
            name: banana-service
            port: 
              number: 5678
